# analysis-diet-life-expectancy

./: README.md
data/processed/: first_clean.csv  primates_dataset.csv
reports/: report.txt
scripts/: analysis.py  cleaning.py  eda.py  pyproject.toml
