[tool.poetry]
name = "analysis-diet-life-expectancy"
version = "0.1.0"
description = "an analysis on the impact of diet in primate populations"
authors = ["Davi Medeiros"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
jinja2 = "^3.1.4"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
